--- a/marcadores/ViewControllers/MatchDetail/MatchDetailHeaderViewViewController.xib
+++ b/marcadores/ViewControllers/MatchDetail/MatchDetailHeaderViewViewController.xib
@@ -229,11 +229,12 @@
                 <outlet property="filterView" destination="bEv-C2-DIr" id="ilU-VV-HhD"/>
                 <outlet property="homeTeamLogoImageView" destination="ZFr-W2-NS4" id="aMg-ER-bxm"/>
                 <outlet property="homeTeamNameLabel" destination="yln-4h-reK" id="Vds-Sn-2O4"/>
+                <outlet property="statusLabel" destination="3CR-4C-pK9" id="x2m-1i-9wK"/>
                 <outlet property="teamsNamesContainerView" destination="TH2-kY-RJ0" id="nqi-pr-W9B"/>
                 <outlet property="visitorTeamLogoImageView" destination="iLh-iX-eWS" id="A6u-CG-WP8"/>
                 <outlet property="visitorTeamNameLabel" destination="LQM-Mi-QRy" id="rM3-96-QdJ"/>
             </connections>
-            <point key="canvasLocation" x="164.5" y="116"/>
+            <point key="canvasLocation" x="-19.5" y="158"/>
         </view>
     </objects>
     <resources>
